--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body style="font-family: 'Roboto', sans-serif;" class="bg-dark-slate-grey max-h-[847px]">
   <div class="h-screen md:my-auto md:flex">
-    <div class="bg-white md:w-2/3 md:h-[60vh] md:my-auto md:mx-auto md:flex md:rounded-3xl">
+    <div class="bg-white md:w-2/3 md:h-[60vh] max-width-custom mx-auto md:my-auto md:mx-auto md:flex md:rounded-3xl">
       <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" class="w-full rounded-b-lg md:hidden">
       <div class="p-8 md:pl-12 md:w-4/7" style="color: hsl(234, 29%, 20%)">
         <h1 class="text-5xl font-bold my-6">Stay updated!</h1>
