--- a/thankyou.html
+++ b/thankyou.html
@@ -16,7 +16,7 @@
   </head>
   <body class="dark-slate-grey bg-dark-slate-grey">
     <div class="h-screen md:my-auto md:flex">
-      <div class="h-screen bg-white flex justify-between px-4 flex-col md:w-1/3 md:h-1/2 md:mx-auto md:p-12 md:my-auto md:rounded-3xl">
+      <div class="h-screen bg-white flex justify-between px-4 flex-col md:w-1/3 md:h-1/2 md:mx-auto md:p-12 md:my-auto md:rounded-3xl max-width-custom-success">
         <div class="my-auto md:my-4">
           <img src="./assets/images/icon-success.svg" alt="" class="h-12 w-12">
           <h1 class="text-4xl font-bold my-8 md:my-4">Thanks for subscribing!</h1>
